# asset-helper

./: .dockerignore  .gitignore  PRD.md  README.md  azure.yaml  dev.bat  dev.ps1  dev.single.bat  dev.single.ps1  pyproject.toml  자산도우미_기획서.md  자산도우미_아키텍처_옵션B.md
.github/workflows/: azure-dev.yml
apps/api/: Dockerfile  requirements.txt
apps/api/src/asset_helper/: __init__.py  main.py  store.py
apps/web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/tests/e2e/: auth.spec.ts  hp-journey.spec.ts  onboarding.spec.ts
docs/: external-integrations.md
infra/: main.bicep  main.parameters.json
tests/integration/: test_account_delete_api.py  test_alerts_api.py  test_auth_and_settings_api.py  test_auth_api.py  test_auto_save_api.py  test_auto_save_cancel_api.py  test_auto_save_log_api.py  test_auto_save_resume_api.py  test_bankapi_api.py  test_events_api.py  test_group_challenge_api.py  test_groups_api.py  test_learning_api.py  test_missions_api.py  test_openbanking_api.py  test_openbanking_polling_api.py  test_openbanking_refresh_api.py  test_payment_preview_api.py  test_push_subscribe_api.py
tests/unit/: test_account_delete.py  test_alerts.py  test_auth.py  test_auto_save.py  test_auto_save_cancel.py  test_auto_save_log.py  test_auto_save_resume.py  test_bankapi.py  test_group_challenge.py  test_groups.py  test_hp.py  test_learning.py  test_openbanking.py  test_openbanking_polling.py  test_openbanking_refresh.py  test_payment_preview.py  test_profile.py  test_push_subscribe.py
(+13 files in other folders)
